Add basic tab feature

--- a/src/client/public/index.html
+++ b/src/client/public/index.html
@@ -33,6 +33,9 @@
   </head>
   <body>
     <noscript><meta http-equiv="refresh" content="0.0;url=/javascript-disabled/index.html" /></noscript>
-    <div id="root"></div>
+    <div class="MainContent">
+      <div id="sidebar"></div>
+      <div id="root"></div>
+    </div>
   </body>
 </html>
